[package]
name = "devela_base_core"
description = "base shared functionality for devela"
repository = "https://github.com/andamira/devela/tree/main/src/base/core"
# version = "0.25.0-wip.0" # published
version.workspace = true
rust-version.workspace = true
edition.workspace = true
documentation.workspace = true
authors.workspace = true
license.workspace = true
include = [
	"/Cargo.toml",
	## source code
	"/src/**/*.rs", "/src/**/*.md",
	"/build/**/*",
	## documentation
	"/LICENSE*",
]
categories = ["rust-patterns", "development-tools"]
keywords = ["dev", "extension"]
build = "build/mod.rs"
autoexamples = false
publish = true
metadata.docs.rs = { features = ["_docs", "__publish"], no-default-features = true }

[lib]
path = "src/index.rs"
bench = false

[features]

#* Development features *#

__dbg = []
__publish = []
__std = [] # remove no_std

#* Module features *#

all = [ # enables all the 12 modules (and their submodules)
	"geom", "media", "num", "text", "ui", # "code", "data", "lang", "phys", "run", "sys", "work",
]
# data = ["hash"]
	# codec
		# hash = []
geom = ["fig"]
	fig = []
media = ["audio", "color", "draw", "font", "image"]
	audio = []
	color = []
	draw = []
	font = []
	image = []
num = ["int", "lin", "rand"]
	# dom
		int = []
		# real
			# float
	lin = [] # linear algebra
	# prob
		rand = []
text = ["grapheme", "translit"]
	grapheme = []
	translit = []
ui = ["term"]
	# layout = []
	# front
		term = [] # media::image::sixel

#* Safety features *#

base_safe = [] # activates safe enforcement of thematic safe_* features
safest = ["safe", "base_safe"]
safe = [
	"devela_base_macros/safe", "safe_build",
	"safe_code", "safe_data", "safe_geom", "safe_lang", "safe_media", "safe_num",
	"safe_phys", "safe_run", "safe_sys", "safe_text", "safe_ui", "safe_work",
]
	safe_build = []
	safe_code = []
	safe_data = []
	safe_geom = []
	safe_lang = []
	safe_media = ["safe_audio", "safe_color", "safe_draw", "safe_font", "safe_image"]
		safe_audio = []
		safe_color = []
		safe_draw = []
		safe_font = []
		safe_image = []
	safe_num = []
	safe_phys = []
	safe_run = []
	safe_sys = ["safe_io", "safe_mem"]
		safe_io = []
		safe_mem = []
	safe_text = []
	safe_ui = []
	safe_work = []

unsafe = [
	"devela_base_macros/unsafe",
	"unsafe_array", "unsafe_ffi", "unsafe_hint", "unsafe_layout",
	"unsafe_niche", "unsafe_ptr", "unsafe_slice", "unsafe_str",
	"unsafe_sync", "unsafe_syscall", "unsafe_thread",
]
	unsafe_array   = []
	unsafe_ffi     = []
	unsafe_hint    = []
	unsafe_layout  = []
	unsafe_niche   = []
	unsafe_ptr     = []
	unsafe_slice   = []
	unsafe_str     = []
	unsafe_sync    = []
	unsafe_syscall = []
	unsafe_thread  = []

#* Capability features *#

_docs_min = [ # the minimum capabilities to document every item
	# modules
	"all",
]
_docs_nodep = ["_docs_min"]
_docs = ["_docs_nodep", "dep_all"]

#* Dependency features (optional external dependencies) *#
# ------------------------------------------------------------------------------
# They are associated to optional dependencies and groups of modules.
# Enabling any of these will set the `dep··` reflection flag.
#
# Names are prefixed with `dep_`, and use underscores in place of dashes.

# In sync with ./config/dep_all & ./src/_dep.rs
dep_all = [ # enables all 3 optional dependencies:
	"dep_memchr", "dep_simdutf8", "dep_rand_core", "dep_wide",
]

# individual dependencies features
dep_memchr = ["dep:memchr"]                                                       # text:str
dep_rand_core = ["dep:rand_core"]                                                 # num::prob::rand
dep_simdutf8 = ["dep:simdutf8"]                                                   # text::str
dep_wide = ["dep:wide"]                                                           # num::grain::wide

[dependencies]
devela_base_macros = { workspace = true }

#* optional external dependencies *#

memchr = { workspace = true, optional = true }
rand_core = { workspace = true, optional = true }
simdutf8 = { workspace = true, optional = true }
wide = { workspace = true, optional = true }

#* required external dependencies *#

[dependencies.pastey_crate] # https://crates.io/crates/pastey
version = "0.2.0" # ✓ https://github.com/AS1100K/pastey/blob/master/CHANGELOG.md
package = "pastey" # safe

[badges]
maintenance.status = "experimental"

[lints]
workspace = true
