[package]
name = "devela_macros"
description = "procedural macros for devela"
repository = "https://github.com/andamira/devela/tree/main/src/base/opt_macros"
# version.workspace = "0.25.0-wip" #
version.workspace = true
rust-version.workspace = true
edition.workspace = true
documentation.workspace = true
authors.workspace = true
license.workspace = true
include = [
	"/Cargo.toml",
	"/LICENSE*",
	"/src/**/*.rs", "/src/**/*.md",
	"/build/**/*",
	"/examples/*.rs", # used in docs
]
categories = ["rust-patterns", "development-tools::procedural-macro-helpers"]
keywords = ["dev", "helper", "helpers", "extension", "code-generation"]
build = "build/mod.rs"
publish = true
metadata.docs.rs = { features = ["_docs", "__publish"], no-default-features = true }

[lib]
path = "src/index.rs"
proc-macro = true
bench = false

[features]

#* Development features *#
__dbg = ["devela_base_std/__dbg"]
__publish = []

#* Safety features *#
safe = []
unsafe = []

#* Capability features *#
_docs_nodep = ["unsafe"]
_docs = ["_docs_nodep"]

[dependencies]
devela_base_std   = { workspace = true }

devela_base_core.workspace = true
proc-macro2 = "1.0.103" # WAIT: [proc_macro_quote](https://github.com/rust-lang/rust/issues/54722)
quote = "1.0.42"

[badges]
maintenance.status = "experimental"

[lints]
workspace = true

[[example]]
name = "enumint_macro"
path = "examples/enumint.rs"
