[package]
name = "devela_macros"
description = "procedural macros for devela"
repository = "https://github.com/andamira/devela/tree/main/src/base/opt_macros"
# version.workspace = "0.25.0-wip" #
version.workspace = true
rust-version.workspace = true
edition.workspace = true
documentation.workspace = true
authors.workspace = true
license.workspace = true
include = [
	"/Cargo.toml",
	"/LICENSE*",
	"/src/**/*.rs", "/src/**/*.md",
	"/build/**/*",
	"/examples/*.rs", # used in docs
]
categories = ["rust-patterns", "development-tools::procedural-macro-helpers"]
keywords = ["dev", "helper", "helpers", "extension", "code-generation"]
build = "build/mod.rs"
publish = true
metadata.docs.rs = { features = ["_docs", "__publish"], no-default-features = true }

[lib]
path = "src/index.rs"
proc-macro = true
bench = false

[features]

#* Development features *#

__dbg = [
	"devela_base_core/__dbg",
	"devela_base_std?/__dbg", "devela_base_alloc?/__dbg",
]
__publish = []
__docs_internal = [ # enables documentation for internal items
	"devela_base_core/__docs_internal",
	"devela_base_alloc?/__docs_internal", "devela_base_std?/__docs_internal",
]

#* Environment features *#

alloc = ["devela_base_alloc"]
std = ["devela_base_std"]

#* Safety features *#

safe = []
unsafe = []

#* Capability features *#

_docs_nodep = [ # +unsafe
	"unsafe"
]
_docs = [ # +dep_all
	"_docs_nodep", "dep_all"
]

#* Dependency features (optional external dependencies) *#
# ------------------------------------------------------------------------------
# They are associated to optional dependencies and groups of modules.
# Enabling any of these will set the `dep··` reflection flag.
#
# Names are prefixed with `dep_`, and use underscores in place of dashes.

# In sync with ./config/dep_all & ./src/yard/_dep.rs
dep_all = [ # enables all 0 external optional dependencies:
]

[dependencies]
devela_base_core.workspace = true

#* optional external dependencies *#

devela_base_alloc = { workspace = true, optional = true }
devela_base_std   = { workspace = true, optional = true }

#* required external dependencies *#

proc-macro2 = "1.0.106" # WAIT: [proc_macro_quote](https://github.com/rust-lang/rust/issues/54722)
quote = "1.0.44"

[badges]
maintenance.status = "experimental"

[lints]
workspace = true

[[example]]
name = "enumint_macro"
path = "examples/enumint.rs"
